obsidian/couchdbdeployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: couchdb
  namespace: obsidian
  labels:
    loadbalancer: cilium
spec:
  type: LoadBalancer
  loadBalancerIP: 10.0.0.207
  selector:
    app: couchdb
  ports:
    - protocol: TCP
      port: 80
      name: http
      targetPort: 5984
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: couchdb
  namespace: obsidian
  labels:
    app: couchdb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: couchdb
  template:
    metadata:
      labels:
        app: couchdb
    spec:
      volumes:
        - name: couchdb-vol
          persistentVolumeClaim:
            claimName: couchdb-truenas-pvc
      containers:
      - name: couchdb
        image: couchdb:3.5.0
        resources:
          requests:
            memory: "125Mi"
            cpu: "250m"
          limits:
            memory: "1000Mi"
            cpu: "1000m"
        ports:
        - containerPort: 5984

        volumeMounts:
          - mountPath: /opt/couchdb/data
            name: couchdb-vol
