obsidian/couchdbingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: couchdb
  namespace: obsidian
  annotations: 
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - obsidian.sushiraccoon.com
    secretName: couchdb-tls
  rules:
  - host: obsidian.sushiraccoon.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: couchdb
            port:
              number: 80
